Post-merge syntax fix